--- a/app_todo/pubspec.yaml
+++ b/app_todo/pubspec.yaml
@@ -31,10 +31,14 @@ dependencies:
   sqflite:
   path_provider:
   intl:
+  moor_flutter:
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  moor_generator:
+  build_runner:
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
